--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://imyourbom.github.io/iyb",
+  "homepage": "https://imyourbom.github.io/pt",
   "name": "website",
   "version": "0.1.0",
   "private": true,
